# rc-frame-analysis

./: .gitignore  README.md  pyproject.toml
configs/layouts/: layout1.json  layout2.json  layout3.json  layout4.json  layout5.json  layout6.json  layout7.json  layout8.json  layout9.json
docs/: method.md
examples/: README.md  analysis_layout1_m42_0000.json  layout1_m42_0000.json
src/rc_frame_analysis/: __init__.py  __main__.py  analysis_core.py  analyze.py  generate.py  pipeline.py
src/rc_frame_analysis/layouts/: __init__.py  generator1.py  generator2.py  generator3.py  generator4.py  generator5.py  generator6.py  generator7.py  generator8.py  generator9.py
